# solana-trading-intelligence

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  cli.py  debug_api.py  dexscreener_test.json  docker-compose.yml  main.py  pyproject.toml  run_dev.py  simulate_cex.py  simulate_events.py
analytics/: __init__.py  attribution.py  forensics.py  pnl_logger.py
api/: server.py  trade_service.py
backtest/: __init__.py  analyzer.py  cli.py  csv_loader.py  data_fetcher.py  models.py  replay_engine.py
backtest/cache/: price_11mMsBws_2026-01-04_2026-01-11.json  price_14q4nHic_2025-12-30_2026-01-06.json  (+1017 more)
db/: graph_init.cypher  schema.sql
db/seeds/: cabals.cypher  (+3 more)
deploy/: deploy.sh  setup_remote.sh  vultr_setup.md
docs/: PROJECT_PROPOSAL.md  data_pipeline.md  fresh_clusters_matcher.md
execution/: __init__.py  jito.py  jupiter_client.py  key_manager.py  orchestrator.py  priority_fees.py  router.py  subwallets.py
ingestion/: __init__.py  cex_monitor.py  config.py  events.py  geyser.py  listener.py  main.py  publisher.py  requirements.txt
logic/: __init__.py  influencer_monitor.py  main.py
scripts/: inject_cabal_db.py  inject_cabal_test.py  realtime_cabal_test.py  seed_influencers.py  seed_influencers.sql  seed_trades.py  setup_telegram.py  simulate_fresh_flow.py  test_execution.py  test_helius.py  test_influencer_alert.py  verify_logic_debug.py
tests/: __init__.py  test_circuit_breaker.py  test_jito.py  test_live_swap.py  test_matcher.py  test_orchestrator.py
web/: db.code-workspace  index.html  modern-ui-polish.css  script.js  styles.css
(+27 files in other folders)
